k8s/base/sway-sig/webserver/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  namespace: sway-sig
spec:
  containers:
    - name: task-pv-container
      image: ghcr.io/anthr76/kutara-ostree:latest@sha256:26fd410a587ce97814d52f21a0b1188d6b5735c2d33b5e8f9f5910761258900b
      command:
        - sh
        - -c
      args:
        - sleep 1d
      volumeMounts:
        - mountPath: "/prod"
          name: task-pv-storage
          subPath: nginx
        - mountPath: "/scratch"
          name: task-pv-storage
          subPath: scratch-repo
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: sway-nginx-v3
