k8s/base/sway-sig/webserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sway-sig
    app.kubernetes.io/name: sway-sig
  annotations:
    configmap.reloader.stakater.com/reload: "sway-sig-nginx-conf"
  name: sway-sig-nginx
  namespace: sway-sig
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: sway-sig
      app.kubernetes.io/name: sway-sig
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sway-sig
        app.kubernetes.io/name: sway-sig
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: feature.node.kubernetes.io/custom-intel-10g
                operator: In
                values:
                - "true"
            weight: 50
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - sway-sig
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - sway-sig
              topologyKey: kubernetes.io/hostname
            weight: 100
      securityContext:
        # runAsUser: 101
        # runAsGroup: 101
        # fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
        seLinuxOptions:
          level: s0
      containers:
        - name: nginx
          image: "ghcr.io/nginxinc/nginx-unprivileged:1.23.3@sha256:24e4c0437bb7b139d2eac4db95ba4ec62a3afb27775d268f72902b71651b4072"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              cpu: 20m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/www/html
              name: data
              subPath: nginx
            - mountPath: /etc/nginx/conf.d
              readOnly: true
              name: nginx-conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sway-nginx-v3
            readOnly: true
        - name: nginx-conf
          configMap:
            name: sway-sig-nginx-conf
