k8s/base/sway-sig/webserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sway-sig
    app.kubernetes.io/name: sway-sig
  name: sway-sig-nginx
  namespace: sway-sig
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: sway-sig
    app.kubernetes.io/name: sway-sig
